public struct Triggers
{
    public const string UnlockFireExtinguisher = "UnlockFireExtinguisher";
    public const string MoveNozzle = "MoveNozzle";
    public const string ToggleHandle = "ToggleHandle";
    public const string ShowBoltUI = "ShowBoltUI";
    public const string ShowHandleArrowUI = "ShowHandleArrowUI";
    public const string FadeHandleArrowUI = "FadeHandleArrowUI";
}